# drf-msgspec-json-renderer

./: LICENSE  README.md  pyproject.toml  tests.py
drf_msgspec_json/: parsers.py  renderers.py
